Added connection string and connected the application with the database

--- a/src/AuthMicroservice.API/appsettings.json
+++ b/src/AuthMicroservice.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings":
+  {
+    "StudentConnection":"Server=(localdb)\\mssqllocaldb;Database=AuthenticationAPIDb;User ID=CommanderAPI;Password=aniekanabasi"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
