Added database migrations and updated database

--- a/src/AuthMicroservice.API/appsettings.json
+++ b/src/AuthMicroservice.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings":
   {
-    "StudentConnection":"Server=(localdb)\\mssqllocaldb;Database=AuthenticationAPIDb;User ID=CommanderAPI;Password=aniekanabasi"
+    "AuthConnection":"Server=(localdb)\\mssqllocaldb;Database=AuthenticationAPIDb;User ID=CommanderAPI;Password=aniekanabasi"
   },
   "Logging": {
     "LogLevel": {
