Added API and Data project

--- a/src/AuthMicroservice.API/appsettings.json
+++ b/src/AuthMicroservice.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings":
+  {
+    "InventoryConnection":"Server=(localdb)\\mssqllocaldb;Database=AuthDb;User ID=CommanderAPI;Password=aniekanabasi"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
