--- a/src/AuthMicroservice.API/Properties/launchSettings.json
+++ b/src/AuthMicroservice.API/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "AuthMicroservice": {
+    "AuthMicroservice.API": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
