Added AuthAPI Feature

--- a/src/AuthMicroservice.API/appsettings.json
+++ b/src/AuthMicroservice.API/appsettings.json
@@ -1,7 +1,10 @@
 {
+  "AppSettings": {
+    "SecretKey": "ds7d9%@0dsd&$%sayudcdc8&%dcd832@%hsasa"
+  },
   "ConnectionStrings":
   {
-    "InventoryConnection":"Server=(localdb)\\mssqllocaldb;Database=AuthDb;User ID=CommanderAPI;Password=aniekanabasi"
+    "AuthConnection":"Server=(localdb)\\mssqllocaldb;Database=AuthDb;User ID=CommanderAPI;Password=aniekanabasi"
   },
   "Logging": {
     "LogLevel": {
